# eftify

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  spotify_control.rs  tarkov_log_watcher.rs
src/components/: Switch.svelte
src/routes/: +page.svelte
