[package]
name = "eftify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "updater",
    "system-tray",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
chrono = "0.4.38"
regex = "1.10.6"
sysinfo = "0.31.3"
tokio = "1.40.0"
env_logger = "0.11.5"
log = "0.4.22"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-theme = "1"
devtools = "0.3.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.windows]
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System"]
version = "0.58.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
