[package]
name = "eftify"
version = "0.0.2"
description = "EFTify"
authors = ["soun1920"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["updater", "system-tray"] }
env_logger = "0.11.5"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-theme = "1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
log = { version = "0.4.22", default-features = false }
regex = "1.10.6"
sysinfo = { version = "0.31.4", features = ["windows", "system"] }
winreg = { version = "0.52", default-features = false }

[dependencies.windows]
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System"]
version = "0.58.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
